update bibliography function

--- a/assets/citations.Rmd
+++ b/assets/citations.Rmd
@@ -1,5 +1,5 @@
 ---
 nocite: |
-  @readr, @stringr, @bibtex, @kableExtra, @knitr, @rmarkdown, @stats, @graphics, @grDevices, @utils, @datasets, @methods, @base
+  @readr, @stringr, @bibtex, @kableExtra, @knitr, @rmarkdown, @stats, @graphics, @grDevices, @utils, @datasets, @nvimcom, @methods, @base
 ...
 
