--- a/references.bib
+++ b/references.bib
@@ -113,6 +113,15 @@
   url = {https://www.R-project.org/},
 }
 
+@Manual{nvimcom,
+  title = {nvimcom: Intermediate the communication between R and either Neovim or
+Vim},
+  author = {Jakson Aquino},
+  year = {2017},
+  note = {R package version 0.9-34},
+  url = {https://github.com/jalvesaq/nvimcom},
+}
+
 @Manual{methods,
   title = {R: A Language and Environment for Statistical Computing},
   author = {{R Core Team}},
