--- a/assets/citations.Rmd
+++ b/assets/citations.Rmd
@@ -1,5 +1,5 @@
 ---
 nocite: |
-  @readr, @stringr, @bibtex, @kableExtra, @knitr, @rmarkdown, @stats, @graphics, @grDevices, @utils, @datasets, @nvimcom, @methods, @base
+  @base, @bibtex, @bindrcpp, @dplyr, @forcats, @ggplot2, @ggpubr, @kableExtra, @knitr, @lubridate, @magrittr, @nvimcom, @purrr, @readr, @rmarkdown, @stringr, @tibble, @tidyr, @tidyverse
 ...
 
