--- a/references.bib
+++ b/references.bib
@@ -1,17 +1,10 @@
-@Manual{readr,
-  title = {readr: Read Rectangular Text Data},
-  author = {Hadley Wickham and Jim Hester and Romain Francois},
+@Manual{base,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
   year = {2017},
-  note = {R package version 1.1.1},
-  url = {https://CRAN.R-project.org/package=readr},
-}
-
-@Manual{stringr,
-  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
-  author = {Hadley Wickham},
-  year = {2017},
-  note = {R package version 1.2.0},
-  url = {https://CRAN.R-project.org/package=stringr},
+  url = {https://www.R-project.org/},
 }
 
 @Manual{bibtex,
@@ -20,6 +13,47 @@
   year = {2017},
   note = {R package version 0.4.2},
   url = {https://CRAN.R-project.org/package=bibtex},
+}
+
+@Manual{bindrcpp,
+  title = {bindrcpp: An 'Rcpp' Interface to Active Bindings},
+  author = {Kirill Müller},
+  year = {2017},
+  note = {R package version 0.2},
+  url = {https://CRAN.R-project.org/package=bindrcpp},
+}
+
+@Manual{dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain Francois and Lionel Henry and Kirill Müller},
+  year = {2017},
+  note = {R package version 0.7.2},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{forcats,
+  title = {forcats: Tools for Working with Categorical Variables (Factors)},
+  author = {Hadley Wickham},
+  year = {2017},
+  note = {R package version 0.2.0},
+  url = {https://CRAN.R-project.org/package=forcats},
+}
+
+@Book{ggplot2,
+  author = {Hadley Wickham},
+  title = {ggplot2: Elegant Graphics for Data Analysis},
+  publisher = {Springer-Verlag New York},
+  year = {2009},
+  isbn = {978-0-387-98140-6},
+  url = {http://ggplot2.org},
+}
+
+@Manual{ggpubr,
+  title = {ggpubr: 'ggplot2' Based Publication Ready Plots},
+  author = {Alboukadel Kassambara},
+  year = {2017},
+  note = {R package version 0.1.4},
+  url = {https://CRAN.R-project.org/package=ggpubr},
 }
 
 @Manual{kableExtra,
@@ -60,57 +94,23 @@
   url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
 
-@Manual{rmarkdown,
-  title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman and Ruben Arslan},
-  year = {2017},
-  note = {R package version 1.6},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+@Article{lubridate,
+  title = {Dates and Times Made Easy with {lubridate}},
+  author = {Garrett Grolemund and Hadley Wickham},
+  journal = {Journal of Statistical Software},
+  year = {2011},
+  volume = {40},
+  number = {3},
+  pages = {1--25},
+  url = {http://www.jstatsoft.org/v40/i03/},
 }
 
-@Manual{stats,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2017},
-  url = {https://www.R-project.org/},
-}
-
-@Manual{graphics,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2017},
-  url = {https://www.R-project.org/},
-}
-
-@Manual{grDevices,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2017},
-  url = {https://www.R-project.org/},
-}
-
-@Manual{utils,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2017},
-  url = {https://www.R-project.org/},
-}
-
-@Manual{datasets,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2017},
-  url = {https://www.R-project.org/},
+@Manual{magrittr,
+  title = {magrittr: A Forward-Pipe Operator for R},
+  author = {Stefan Milton Bache and Hadley Wickham},
+  year = {2014},
+  note = {R package version 1.5},
+  url = {https://CRAN.R-project.org/package=magrittr},
 }
 
 @Manual{nvimcom,
@@ -122,21 +122,59 @@ Vim},
   url = {https://github.com/jalvesaq/nvimcom},
 }
 
-@Manual{methods,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
+@Manual{purrr,
+  title = {purrr: Functional Programming Tools},
+  author = {Lionel Henry and Hadley Wickham},
   year = {2017},
-  url = {https://www.R-project.org/},
+  note = {R package version 0.2.3},
+  url = {https://CRAN.R-project.org/package=purrr},
 }
 
-@Manual{base,
-  title = {R: A Language and Environment for Statistical Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
+@Manual{readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester and Romain Francois},
   year = {2017},
-  url = {https://www.R-project.org/},
+  note = {R package version 1.1.1},
+  url = {https://CRAN.R-project.org/package=readr},
+}
+
+@Manual{rmarkdown,
+  title = {rmarkdown: Dynamic Documents for R},
+  author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman and Ruben Arslan},
+  year = {2017},
+  note = {R package version 1.6},
+  url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
+@Manual{stringr,
+  title = {stringr: Simple, Consistent Wrappers for Common String Operations},
+  author = {Hadley Wickham},
+  year = {2017},
+  note = {R package version 1.2.0},
+  url = {https://CRAN.R-project.org/package=stringr},
+}
+
+@Manual{tibble,
+  title = {tibble: Simple Data Frames},
+  author = {Kirill Müller and Hadley Wickham},
+  year = {2017},
+  note = {R package version 1.3.3},
+  url = {https://CRAN.R-project.org/package=tibble},
+}
+
+@Manual{tidyr,
+  title = {tidyr: Easily Tidy Data with 'spread()' and 'gather()' Functions},
+  author = {Hadley Wickham},
+  year = {2017},
+  note = {R package version 0.6.3},
+  url = {https://CRAN.R-project.org/package=tidyr},
+}
+
+@Manual{tidyverse,
+  title = {tidyverse: Easily Install and Load 'Tidyverse' Packages},
+  author = {Hadley Wickham},
+  year = {2017},
+  note = {R package version 1.1.1},
+  url = {https://CRAN.R-project.org/package=tidyverse},
 }
 
