--- a/assets/packages.bib
+++ b/assets/packages.bib
@@ -146,6 +146,14 @@ Vim},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
+@Manual{rmarkdown,
+  title = {rmarkdown: Dynamic Documents for R},
+  author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman and Ruben Arslan},
+  year = {2017},
+  note = {R package version 1.6},
+  url = {https://CRAN.R-project.org/package=rmarkdown},
+}
+
 @Manual{stringr,
   title = {stringr: Simple, Consistent Wrappers for Common String Operations},
   author = {Hadley Wickham},
