--- a/references.bib
+++ b/references.bib
@@ -47,6 +47,14 @@
   url = {https://CRAN.R-project.org/package=forcats},
 }
 
+@Manual{ggmosaic,
+  title = {ggmosaic: Mosaic Plots in the 'ggplot2' Framework},
+  author = {Haley Jeppson and Heike Hofmann and Di Cook},
+  year = {2017},
+  note = {R package version 0.1.2},
+  url = {https://CRAN.R-project.org/package=ggmosaic},
+}
+
 @Book{ggplot2,
   author = {Hadley Wickham},
   title = {ggplot2: Elegant Graphics for Data Analysis},
@@ -128,6 +136,14 @@ Vim},
   year = {2017},
   note = {R package version 0.9-34},
   url = {https://github.com/jalvesaq/nvimcom},
+}
+
+@Manual{productplots,
+  title = {productplots: Product Plots for R},
+  author = {Hadley Wickham and Heike Hofmann},
+  year = {2016},
+  note = {R package version 0.1.1},
+  url = {https://CRAN.R-project.org/package=productplots},
 }
 
 @Manual{purrr,
