--- a/assets/packages.bib
+++ b/assets/packages.bib
@@ -31,12 +31,29 @@
   url = {https://CRAN.R-project.org/package=broom},
 }
 
+@Manual{caret,
+  title = {caret: Classification and Regression Training},
+  author = {Max Kuhn. Contributions from Jed Wing and Steve Weston and Andre Williams and Chris Keefer and Allan Engelhardt and Tony Cooper and Zachary Mayer and Brenton Kenkel and the R Core Team and Michael Benesty and Reynald Lescarbeau and Andrew Ziem and Luca Scrucca and Yuan Tang and Can Candan and Tyler Hunt.},
+  year = {2017},
+  note = {R package version 6.0-76},
+  url = {https://CRAN.R-project.org/package=caret},
+}
+
 @Manual{dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain Francois and Lionel Henry and Kirill Müller},
   year = {2017},
   note = {R package version 0.7.2},
   url = {https://CRAN.R-project.org/package=dplyr},
+}
+
+@Manual{e1071,
+  title = {e1071: Misc Functions of the Department of Statistics, Probability
+Theory Group (Formerly: E1071), TU Wien},
+  author = {David Meyer and Evgenia Dimitriadou and Kurt Hornik and Andreas Weingessel and Friedrich Leisch},
+  year = {2017},
+  note = {R package version 1.6-8},
+  url = {https://CRAN.R-project.org/package=e1071},
 }
 
 @Manual{forcats,
@@ -110,6 +127,16 @@
   url = {http://www.crcpress.com/product/isbn/9781466561595},
 }
 
+@Book{lattice,
+  title = {Lattice: Multivariate Data Visualization with R},
+  author = {Deepayan Sarkar},
+  publisher = {Springer},
+  address = {New York},
+  year = {2008},
+  note = {ISBN 978-0-387-75968-5},
+  url = {http://lmdvr.r-forge.r-project.org},
+}
+
 @Article{lubridate,
   title = {Dates and Times Made Easy with {lubridate}},
   author = {Garrett Grolemund and Hadley Wickham},
@@ -152,6 +179,28 @@ Vim},
   year = {2017},
   note = {R package version 0.2.3},
   url = {https://CRAN.R-project.org/package=purrr},
+}
+
+@Article{randomForest,
+  title = {Classification and Regression by randomForest},
+  author = {Andy Liaw and Matthew Wiener},
+  journal = {R News},
+  year = {2002},
+  volume = {2},
+  number = {3},
+  pages = {18-22},
+  url = {http://CRAN.R-project.org/doc/Rnews/},
+}
+
+@Article{ranger,
+  title = {{ranger}: A Fast Implementation of Random Forests for High Dimensional Data in {C++} and {R}},
+  author = {Marvin N. Wright and Andreas Ziegler},
+  journal = {Journal of Statistical Software},
+  year = {2017},
+  volume = {77},
+  number = {1},
+  pages = {1--17},
+  doi = {10.18637/jss.v077.i01},
 }
 
 @Manual{readr,
