--- a/references.bib
+++ b/references.bib
@@ -39,6 +39,14 @@
   url = {https://CRAN.R-project.org/package=caret},
 }
 
+@Manual{doParallel,
+  title = {doParallel: Foreach Parallel Adaptor for the 'parallel' Package},
+  author = {Revolution Analytics and Steve Weston},
+  year = {2015},
+  note = {R package version 1.0.10},
+  url = {https://CRAN.R-project.org/package=doParallel},
+}
+
 @Manual{dplyr,
   title = {dplyr: A Grammar of Data Manipulation},
   author = {Hadley Wickham and Romain Francois and Lionel Henry and Kirill Müller},
@@ -47,21 +55,20 @@
   url = {https://CRAN.R-project.org/package=dplyr},
 }
 
-@Manual{e1071,
-  title = {e1071: Misc Functions of the Department of Statistics, Probability
-Theory Group (Formerly: E1071), TU Wien},
-  author = {David Meyer and Evgenia Dimitriadou and Kurt Hornik and Andreas Weingessel and Friedrich Leisch},
-  year = {2017},
-  note = {R package version 1.6-8},
-  url = {https://CRAN.R-project.org/package=e1071},
-}
-
 @Manual{forcats,
   title = {forcats: Tools for Working with Categorical Variables (Factors)},
   author = {Hadley Wickham},
   year = {2017},
   note = {R package version 0.2.0},
   url = {https://CRAN.R-project.org/package=forcats},
+}
+
+@Manual{foreach,
+  title = {foreach: Provides Foreach Looping Construct for R},
+  author = {Revolution Analytics and Steve Weston},
+  year = {2015},
+  note = {R package version 1.4.3},
+  url = {https://CRAN.R-project.org/package=foreach},
 }
 
 @Manual{ggmosaic,
@@ -87,6 +94,14 @@ Theory Group (Formerly: E1071), TU Wien},
   year = {2017},
   note = {R package version 0.1.4},
   url = {https://CRAN.R-project.org/package=ggpubr},
+}
+
+@Manual{iterators,
+  title = {iterators: Provides Iterator Construct for R},
+  author = {Revolution Analytics and Steve Weston},
+  year = {2015},
+  note = {R package version 1.0.8},
+  url = {https://CRAN.R-project.org/package=iterators},
 }
 
 @Manual{kableExtra,
@@ -165,6 +180,15 @@ Vim},
   url = {https://github.com/jalvesaq/nvimcom},
 }
 
+@Manual{parallel,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
+  year = {2017},
+  url = {https://www.R-project.org/},
+}
+
 @Manual{productplots,
   title = {productplots: Product Plots for R},
   author = {Hadley Wickham and Heike Hofmann},
@@ -190,17 +214,6 @@ Vim},
   number = {3},
   pages = {18-22},
   url = {http://CRAN.R-project.org/doc/Rnews/},
-}
-
-@Article{ranger,
-  title = {{ranger}: A Fast Implementation of Random Forests for High Dimensional Data in {C++} and {R}},
-  author = {Marvin N. Wright and Andreas Ziegler},
-  journal = {Journal of Statistical Software},
-  year = {2017},
-  volume = {77},
-  number = {1},
-  pages = {1--17},
-  doi = {10.18637/jss.v077.i01},
 }
 
 @Manual{readr,
