--- a/main.Rmd
+++ b/main.Rmd
@@ -30,6 +30,8 @@ library(ggpubr)
 library(ggmosaic)
 library(broom)
 library(caret)
+library(ranger)
+library(gbm)
 library(parallel)
 library(doParallel)
 ```
@@ -353,16 +355,17 @@ test <- dataset %>%
   select(-train)
 ```
 
-## Initiate parallele
-
-```{r parallel}
-cluster <- makeCluster(detectCores() - 1) # convention to leave 1 core for OS
-registerDoParallel(cluster)
-```
-
 ## Random forest
 
 ```{r random-forest}
+######################### mettre les imputations en dehors
+
+start_time <- Sys.time()
+
+# initiate the multicore
+cluster <- makeCluster(detectCores() - 1) # convention to leave 1 core for OS
+registerDoParallel(cluster)
+
 train$age[is.na(train$age)] <- median(train$age, na.rm = TRUE)
 model <- train(factor(survived) ~ ticket_class + 
                                   ticket_fare + 
@@ -375,13 +378,22 @@ model <- train(factor(survived) ~ ticket_class +
                data = train, 
                method = "rf",
                tuneLength = 5,
+	       tuneGrid = data.frame(mtry = c(2, 4, 8, 12, 16, 20)),
                #preProcess = "medianImpute",
                trControl = trainControl(
                  method = "cv", number = 10,
                  allowParallel = TRUE,
                #  summaryFunction = twoClassSummary,
                #  classProbs = TRUE,
-                 repeats = 5, verboseIter = TRUE))
+                 repeats = 5, verboseIter = FALSE))
+
+# stop multicore
+stopCluster(cluster)
+registerDoSEQ()
+
+end_time <- Sys.time()
+
+duration <- end_time - start_time
 
 model 
 
@@ -401,11 +413,60 @@ test_p <- predict(model, test, type = "raw")
 confusionMatrix(test_p, test_ans$survived)
 ```
 
-## Stop parallel
+```{r gbm}
+######################### mettre les imputations en dehors
 
-```{r parallel_close}
+start_time <- Sys.time()
+
+# initiate the multicore
+cluster <- makeCluster(detectCores() - 1) # convention to leave 1 core for OS
+registerDoParallel(cluster)
+
+train$age[is.na(train$age)] <- median(train$age, na.rm = TRUE)
+model <- train(factor(survived) ~ ticket_class + 
+                                  ticket_fare + 
+                                  category +
+                                  sex +
+                                  family_size +
+                                  family_horiz +
+                                  family_vert +
+                                  age,
+               data = train, 
+               method = "gbm",
+               #tuneLength = 5,
+	       #tuneGrid = data.frame(mtry = c(2, 4, 8, 12, 16, 20)),
+               #preProcess = "medianImpute",
+               trControl = trainControl(
+                 method = "cv", number = 10,
+                 allowParallel = TRUE,
+               #  summaryFunction = twoClassSummary,
+               #  classProbs = TRUE,
+                 repeats = 5, verboseIter = FALSE))
+
+# stop multicore
 stopCluster(cluster)
 registerDoSEQ()
+
+end_time <- Sys.time()
+
+duration <- end_time - start_time
+
+model 
+
+p_prob <- predict(model, train, type = "prob")
+p_raw <- predict(model, train, type = "raw")
+
+confusionMatrix(p_raw, train$survived)
+
+test_ans <- read_csv("data/raw/gender_submission.csv") %>%
+  select(passenger_id = PassengerId, survived = Survived)
+
+test$age[is.na(test$age)] <- median(test$age, na.rm = TRUE)
+test$ticket_fare[is.na(test$ticket_fare)] <- median(test$ticket_fare, na.rm = TRUE)
+
+test_p <- predict(model, test, type = "raw")
+
+confusionMatrix(test_p, test_ans$survived)
 ```
 
 <!-- biliography -->
