--- a/assets/packages.bib
+++ b/assets/packages.bib
@@ -15,14 +15,6 @@
   url = {https://CRAN.R-project.org/package=bibtex},
 }
 
-@Manual{bindrcpp,
-  title = {bindrcpp: An 'Rcpp' Interface to Active Bindings},
-  author = {Kirill Müller},
-  year = {2017},
-  note = {R package version 0.2},
-  url = {https://CRAN.R-project.org/package=bindrcpp},
-}
-
 @Manual{broom,
   title = {broom: Convert Statistical Analysis Objects into Tidy Data Frames},
   author = {David Robinson},
@@ -69,6 +61,14 @@
   year = {2015},
   note = {R package version 1.4.3},
   url = {https://CRAN.R-project.org/package=foreach},
+}
+
+@Manual{gbm,
+  title = {gbm: Generalized Boosted Regression Models},
+  author = {Greg Ridgeway with contributions from others},
+  year = {2017},
+  note = {R package version 2.1.3},
+  url = {https://CRAN.R-project.org/package=gbm},
 }
 
 @Manual{ggmosaic,
@@ -205,15 +205,15 @@ Vim},
   url = {https://CRAN.R-project.org/package=purrr},
 }
 
-@Article{randomForest,
-  title = {Classification and Regression by randomForest},
-  author = {Andy Liaw and Matthew Wiener},
-  journal = {R News},
-  year = {2002},
-  volume = {2},
-  number = {3},
-  pages = {18-22},
-  url = {http://CRAN.R-project.org/doc/Rnews/},
+@Article{ranger,
+  title = {{ranger}: A Fast Implementation of Random Forests for High Dimensional Data in {C++} and {R}},
+  author = {Marvin N. Wright and Andreas Ziegler},
+  journal = {Journal of Statistical Software},
+  year = {2017},
+  volume = {77},
+  number = {1},
+  pages = {1--17},
+  doi = {10.18637/jss.v077.i01},
 }
 
 @Manual{readr,
@@ -224,12 +224,13 @@ Vim},
   url = {https://CRAN.R-project.org/package=readr},
 }
 
-@Manual{rmarkdown,
-  title = {rmarkdown: Dynamic Documents for R},
-  author = {JJ Allaire and Joe Cheng and Yihui Xie and Jonathan McPherson and Winston Chang and Jeff Allen and Hadley Wickham and Aron Atkins and Rob Hyndman and Ruben Arslan},
+@Manual{splines,
+  title = {R: A Language and Environment for Statistical Computing},
+  author = {{R Core Team}},
+  organization = {R Foundation for Statistical Computing},
+  address = {Vienna, Austria},
   year = {2017},
-  note = {R package version 1.6},
-  url = {https://CRAN.R-project.org/package=rmarkdown},
+  url = {https://www.R-project.org/},
 }
 
 @Manual{stringr,
@@ -238,6 +239,23 @@ Vim},
   year = {2017},
   note = {R package version 1.2.0},
   url = {https://CRAN.R-project.org/package=stringr},
+}
+
+@Manual{survival1,
+  title = {A Package for Survival Analysis in S},
+  author = {Terry M Therneau},
+  year = {2015},
+  note = {version 2.38},
+  url = {https://CRAN.R-project.org/package=survival},
+}
+
+@Book{survival2,
+  title = {Modeling Survival Data: Extending the {C}ox Model},
+  author = {{Terry M. Therneau} and {Patricia M. Grambsch}},
+  year = {2000},
+  publisher = {Springer},
+  address = {New York},
+  isbn = {0-387-98784-3},
 }
 
 @Manual{tibble,
