--- a/assets/packages.bib
+++ b/assets/packages.bib
@@ -92,7 +92,7 @@
   title = {ggpubr: 'ggplot2' Based Publication Ready Plots},
   author = {Alboukadel Kassambara},
   year = {2017},
-  note = {R package version 0.1.4},
+  note = {R package version 0.1.5},
   url = {https://CRAN.R-project.org/package=ggpubr},
 }
 
@@ -108,7 +108,7 @@
   title = {kableExtra: Construct Complex Table with 'kable' and Pipe Syntax},
   author = {Hao Zhu},
   year = {2017},
-  note = {R package version 0.3.0},
+  note = {R package version 0.4.0},
   url = {https://CRAN.R-project.org/package=kableExtra},
 }
 
@@ -116,8 +116,8 @@
   title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2017},
-  note = {R package version 1.16},
-  url = {http://yihui.name/knitr/},
+  note = {R package version 1.17},
+  url = {https://yihui.name/knitr/},
 }
 
 @Book{knitr2,
@@ -128,7 +128,7 @@
   year = {2015},
   edition = {2nd},
   note = {ISBN 978-1498716963},
-  url = {http://yihui.name/knitr/},
+  url = {https://yihui.name/knitr/},
 }
 
 @InCollection{knitr3,
@@ -201,7 +201,7 @@ Vim},
   title = {purrr: Functional Programming Tools},
   author = {Lionel Henry and Hadley Wickham},
   year = {2017},
-  note = {R package version 0.2.3},
+  note = {R package version 0.2.2.2},
   url = {https://CRAN.R-project.org/package=purrr},
 }
 
